# traccuracy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  developer_notes.md  pyproject.toml  setup.py  test_basic.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bugs.md  features.md
.github/PULL_REQUEST_TEMPLATE/: general.md  new_matcher_metric.md
.github/workflows/: benchmark-pr.py  benchmark-report.yml  ci.yml  docs.yml
dev/bench/: data.js
docs/: requirements-docs.txt  write_graph_test_cases.py  write_seg_test_cases.py
docs/source/: cli.md  cli.rst  conf.py  index.md  index.rst
docs/source/API/: cell_tracking_metrics.loaders.rst  cell_tracking_metrics.matchers.rst  cell_tracking_metrics.rst  cell_tracking_metrics.summarization.rst  cell_tracking_metrics.track_errors.rst
docs/source/_static/css/: tablefix.css
docs/source/examples/: ctc.nblink  test-cases.nblink
docs/source/matchers/: matchers.md  matchers.rst
docs/source/metrics/: basic.md  basic.rst  ctc.md  ctc.rst  divisions.md  divisions.rst  track_overlap.md  track_overlap.rst
docs/source/test_cases/: divisions.md  divisions.pct.py  errors.md  errors.pct.py  graphs.md  graphs.pct.py  index.md  index.rst  matchers.md  matchers.pct.py  segmentation.md  segmentation.pct.py  test_description.rst
docs/source/track_errors/: basic.md  basic.pct.py  ctc.md  ctc.rst  divisions.md  divisions.rst  edges.pct.py  edges.rst  gap_closing.rst  nodes.pct.py  nodes.rst
examples/: ctc.ipynb  test-cases.ipynb
examples/sample-data/Fluo-N2DL-HeLa/01_RES/: mask000.tif  mask001.tif  mask002.tif  mask003.tif  mask004.tif  mask005.tif  mask006.tif  mask007.tif  mask008.tif  mask009.tif  mask010.tif  mask011.tif  mask012.tif  mask013.tif  mask014.tif  mask015.tif  mask016.tif  mask017.tif  mask018.tif  mask019.tif  mask020.tif  mask021.tif  mask022.tif  mask023.tif  mask024.tif  mask025.tif  mask026.tif  mask027.tif  mask028.tif  mask029.tif  mask030.tif  mask031.tif  mask032.tif  mask033.tif  mask034.tif  mask035.tif  mask036.tif  mask037.tif  mask038.tif  mask039.tif  (+53 more)
scripts/: download_test_data.py  test_case_report.py
src/cell_tracking_metrics/: __init__.py  run_metrics.py  tracking_data.py  tracking_graph.py  utils.py
src/cell_tracking_metrics/loaders/: __init__.py  ctc.py
src/cell_tracking_metrics/matchers/: __init__.py  compute_overlap.py  compute_overlap.pyx  ctc.py  iou.py  matched.py
src/cell_tracking_metrics/metrics/: base.py  ctc.py  divisions.py
src/cell_tracking_metrics/summarization/: divisions.py  metrics.py  normalized_counts.py
src/cell_tracking_metrics/track_errors/: __init__.py  ctc.py  division_events.py  divisions.py  track_events.py
src/traccuracy/: __init__.py  _run_metrics.py  _tracking_data.py  _tracking_graph.py  _utils.py  cli.py  run_metrics.py  tracking_data.py  utils.py
src/traccuracy/loaders/: __init__.py  _ctc.py  _point.py  ctc.py
src/traccuracy/matchers/: __init__.py  _base.py  _compute_overlap.py  _ctc.py  _iou.py  _matched.py  _point.py  _point_in_seg.py  _point_seg.py  ctc.py  iou.py
src/traccuracy/metrics/: __init__.py  _base.py  _basic.py  _ctc.py  _divisions.py  _track_matching.py  _track_overlap.py  base.py  ctc.py  divisions.py
src/traccuracy/track_errors/: __init__.py  _ctc.py  basic.py  ctc.py  division_events.py  divisions.py  track_events.py
tests/: bench.py  conftest.py  test_cli.py  test_run_metrics.py  test_tracking_graph.py  test_utils.py
tests/examples/: example_matched_graphs.py  example_segmentations.py  graphs.py  segs.py
tests/loaders/: test_ctc.py  test_point.py
tests/matchers/: test_base.py  test_compute_overlap.py  test_ctc.py  test_iou.py  test_point.py  test_point_in_seg.py  test_point_seg.py  test_utils.py
tests/metrics/: test_base.py  test_basic.py  test_ctc_errors.py  test_ctc_metrics.py  test_divisions.py  test_track_overlap_metrics.py  test_weighted_error_sums.py
tests/track_errors/: test_basic.py  test_ctc_errors.py  test_divisions.py
